fix: update h1 styling so in mobile view it doesnt overlap text below

--- a/pegasus/sites.v3/code.org/public/css/donors.css
+++ b/pegasus/sites.v3/code.org/public/css/donors.css
@@ -70,12 +70,10 @@ table td {
   width: 100%;
   font-size: 24px;
   font-weight: 900;
-  margin: 0px;
+  margin: 0 0 12px 0;
   padding: 0px;
   text-align: center;
   color: #4d575f;
-  position: absolute;
-  top: 0px;
   font-family: 'Gotham 4r', sans-serif;
 }
 
